added social media - twitter, medium and facebook. also added picture for Kevin and Troy

--- a/index.html
+++ b/index.html
@@ -53,10 +53,16 @@
 							<img src="images/Digital Reserve Stack.png" alt="" />
 					</div>
 					<!--- <a href="index.html" class="logo">Digital Reserve</a> -->
+					
 					<nav id="nav">
-						<a href="index.html">Home</a>
-						<a href="generic.html">Generic</a>
-						<a href="elements.html">Elements</a>
+						<!--<a href="index.html">Home</a>-->
+						<ul class="icons">
+							<li><a href="https://medium.com/the-digital-reserve" class="icon fa-medium"><span class="label">Medium</span></a></li>
+							<li><a href="https://www.facebook.com/digitalreserve/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://twitter.com/DigitalReserve" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+						</ul>
+					
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
@@ -131,7 +137,7 @@
 					<div class="flex flex-4">
 						<div class="box person">
 							<div class="image round">
-								<img src="images/pic03.jpg" alt="Person 1" />
+								<img src="images/Jomari.JPG" alt="Person 1" />
 							</div>
 							<h3>Jomari Peterson</h3>
 							<p>Founder/CEO</p>
@@ -174,7 +180,7 @@
 						</div>
 						<div class="box person">
 							<div class="image round">
-								<img src="images/pic04.jpg" alt="Person 2" />
+								<img src="images/Kevin.jpg" alt="Person 2" />
 							</div>
 							<h3>Kevin Scanlan </h3>
 							<p>Kramer Levin Naftalis and Frankel LLP</p></br>
