Update add image and updates of copy from Joshua

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 						</div>
 						<div class="box person">
 							<div class="image round">
-								<img src="images/pic05.jpg" alt="Person 3" />
+								<img src="images/Troy.jpg" alt="Person 3" />
 							</div>
 							<h3>Troy Wiipongwii</h3>
 							<p>Blockchain Developer - Machine Learning & Economics</p>
