Update of the social links

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 							<li><a href="https://www.facebook.com/digitalreserve/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="https://twitter.com/DigitalReserve" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						</ul>
-					
+							<li><a href="https://riot.im/app/#/room/#thedigitalreserve-dev:matrix.org" class="icon fa-users"><span class="label">Riot Chat</span></a></li>
+						</ul>					
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
